# Fastapi_agent

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: api-standards.mdc  env-security.mdc  logging-observability.mdc  testing-readme.mdc  workflow.mdc
.cursor/skills/api-dev/: SKILL.md
.cursor/skills/python-dev/: SKILL.md
app/: __init__.py  agent.py  config.py  main.py  models.py  routes.py  services.py
tests/: conftest.py  test_agent.py
