[project]
name = "fastapi-agent"
version = "0.1.0"
description = "FastAPI API that dynamically creates and runs LangChain agents per request."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
